--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,18 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <h1>Oi, turubom</h1>
+  <div class="vz-container">
+    Olar
+  </div>
+
+  <div class="vz-container vz-container--narrow">
+    Narrow
+  </div>
+
+  <div class="vz-container vz-container--fluid">
+    Fluid
+  </div>
+
   <script src="main.js"></script>
 </body>
 </html>
