Layout grid setup.

--- a/public/index.html
+++ b/public/index.html
@@ -8,16 +8,24 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <div class="vz-container">
-    Olar
-  </div>
 
-  <div class="vz-container vz-container--narrow">
-    Narrow
-  </div>
+  <div class="vz-layout">
 
-  <div class="vz-container vz-container--fluid">
-    Fluid
+    <div class="vz-layout__aside"></div>
+
+    <div class="vz-layout__container">
+      <div class="vz-container">
+        Olar
+      </div>
+
+      <div class="vz-container vz-container--narrow">
+        Narrow
+      </div>
+
+      <div class="vz-container vz-container--fluid">
+        Fluid
+      </div>
+    </div>
   </div>
 
   <script src="main.js"></script>
