--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,16 @@
     <div class="vz-layout__aside"></div>
 
     <div class="vz-layout__container">
+
+      <div class="vz-breadcrumbs">
+        <div class="vz-breadcrumbs__item">
+          <a href="/">Lorem Ipsum</a>
+        </div>
+        <div class="vz-breadcrumbs__item">
+          <a href="/">Lorem Ipsum</a>
+        </div>
+      </div>
+
       <div class="vz-container">
         Olar
       </div>
