--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,30 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
+
+  <div class="vz-layout">
+    <div class="vz-layout__brand">
+      LOGO
+    </div>
+
+    <div class="vz-layout__menu">
+      <div class="vz-sidebar">
+        <div class="vz-sidebar__options">
+          options
+        </div>
+
+        <div class="vz-sidebar__user">
+          user
+        </div>
+      </div>
+    </div>
+
+    <div class="vz-layout__bradcrumbs">MIGALHA DE PAO</div>
+
+    <div class="vz-layout__content">CONTENTE</div>
+  </div>
+
+
   <div class="vz-container">
     Olar
   </div>
