--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,15 @@
 
   <div class="vz-layout">
     <div class="vz-layout__brand">
-      LOGO
+      <div class="vz-brand">
+        <a href="/">
+          <img src="images/logo_branco.png" alt="">
+        </a>
+      </div>
+
+      <div class="vz-logo">
+        <img src="" alt="">
+      </div>
     </div>
 
     <div class="vz-layout__menu">
