--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Titillium+Web:400,600">
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -40,6 +41,7 @@
   </div>
 
 
+  <!--
   <div class="vz-container">
     Olar
   </div>
@@ -53,5 +55,6 @@
   </div>
 
   <script src="main.js"></script>
+  -->
 </body>
 </html>
