--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <div class="vz-layout">
     <div class="vz-layout__brand">
       <div class="vz-brand">
-        <a href="/">
+        <a href="#">
           <img src="images/logo_branco.png" alt="">
         </a>
       </div>
@@ -38,11 +38,11 @@
     <div class="vz-layout__breadcrumbs">
       <nav class="vz-breadcrumbs">
         <div class="vz-breadcrumbs__item">
-          <a href="/">Watson Answers</a>
+          <a href="#">Watson Answers</a>
         </div>
 
         <div class="vz-breadcrumbs__item">
-          <a href="/answer/">Respostas</a>
+          <a href="#">Respostas</a>
         </div>
       </nav>
     </div>
