--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,24 @@
         </div>
 
         <div class="vz-sidebar__user">
-          user
+          <div class="vz-user">
+            <div class="vz-user__details">
+              <div class="vz-user__avatar">
+                <img src="//www.gravatar.com/avatar/?d=retro&r=pg&s=300" alt="">
+              </div>
+
+              <div class="vz-user__credentials">
+                <div class="vz-user__name">Fulano de Tal</div>
+                <div class="vz-user__roles">Editor</div>
+              </div>
+            </div>
+
+            <div class="vz-user__actions">
+              <div class="vz-user__logout">
+                <a href="#">Sair</a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
