--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
           <div class="vz-user">
             <div class="vz-user__details">
               <div class="vz-user__avatar">
-                <img src="//www.gravatar.com/avatar/?d=retro&r=pg&s=300" alt="">
+                <img src="//www.gravatar.com/avatar/205e460b479e2e5b48aec07710c08d50?d=retro&r=pg&s=300" alt="">
               </div>
 
               <div class="vz-user__credentials">
@@ -75,6 +75,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum explicabo deserunt laudantium temporibus nihil distinctio a quibusdam! Delectus eius nostrum, itaque error in doloremque laborum praesentium enim id deserunt ad!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum explicabo deserunt laudantium temporibus nihil distinctio a quibusdam! Delectus eius nostrum, itaque error in doloremque laborum praesentium enim id deserunt ad!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum explicabo deserunt laudantium temporibus nihil distinctio a quibusdam! Delectus eius nostrum, itaque error in doloremque laborum praesentium enim id deserunt ad!</p>
+        <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum explicabo deserunt laudantium temporibus nihil distinctio a quibusdam! Delectus eius nostrum, itaque error in doloremque laborum praesentium enim id deserunt ad!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum explicabo deserunt laudantium temporibus nihil distinctio a quibusdam! Delectus eius nostrum, itaque error in doloremque laborum praesentium enim id deserunt ad!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum explicabo deserunt laudantium temporibus nihil distinctio a quibusdam! Delectus eius nostrum, itaque error in doloremque laborum praesentium enim id deserunt ad!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum explicabo deserunt laudantium temporibus nihil distinctio a quibusdam! Delectus eius nostrum, itaque error in doloremque laborum praesentium enim id deserunt ad!</p>
@@ -105,8 +106,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum explicabo deserunt laudantium temporibus nihil distinctio a quibusdam! Delectus eius nostrum, itaque error in doloremque laborum praesentium enim id deserunt ad!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum explicabo deserunt laudantium temporibus nihil distinctio a quibusdam! Delectus eius nostrum, itaque error in doloremque laborum praesentium enim id deserunt ad!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum explicabo deserunt laudantium temporibus nihil distinctio a quibusdam! Delectus eius nostrum, itaque error in doloremque laborum praesentium enim id deserunt ad!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum explicabo deserunt laudantium temporibus nihil distinctio a quibusdam! Delectus eius nostrum, itaque error in doloremque laborum praesentium enim id deserunt ad!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum explicabo deserunt laudantium temporibus nihil distinctio a quibusdam! Delectus eius nostrum, itaque error in doloremque laborum praesentium enim id deserunt ad!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum explicabo deserunt laudantium temporibus nihil distinctio a quibusdam! Delectus eius nostrum, itaque error in doloremque laborum praesentium enim id deserunt ad!</p> -->
       </div>
     </div>
   </div>
