--- a/public/index.html
+++ b/public/index.html
@@ -54,13 +54,9 @@
 
     <div class="vz-layout__breadcrumbs">
       <nav class="vz-breadcrumbs">
-        <div class="vz-breadcrumbs__item">
-          <a href="#">Watson Answers</a>
-        </div>
-
-        <div class="vz-breadcrumbs__item">
-          <a href="#">Respostas</a>
-        </div>
+        <div class="vz-breadcrumbs__item"><a href="#">Amazing App</a></div>
+        <div class="vz-breadcrumbs__item"><a href="#">Section</a></div>
+        <div class="vz-breadcrumbs__item"><a href="#">Item</a></div>
       </nav>
     </div>
 
