--- a/public/index.html
+++ b/public/index.html
@@ -11,18 +11,24 @@
 
   <div class="vz-layout">
 
-    <div class="vz-layout__aside"></div>
+    <div class="vz-layout__aside">
+
+      <div class="vz-logo">
+        <img src="/assets/images/logo_branco.png" alt="">
+      </div>
+
+    </div>
 
     <div class="vz-layout__container">
 
-      <div class="vz-breadcrumbs">
+      <nav class="vz-breadcrumbs">
         <div class="vz-breadcrumbs__item">
           <a href="/">Lorem Ipsum</a>
         </div>
         <div class="vz-breadcrumbs__item">
           <a href="/">Lorem Ipsum</a>
         </div>
-      </div>
+      </nav>
 
       <div class="vz-container">
         Olar
