--- a/public/index.html
+++ b/public/index.html
@@ -57,15 +57,55 @@
     </div>
 
     <div class="vz-layout__content">
+      <h1 class="vz-page__header">compact table</h1>
+      <table class="vz-table vz-table--compact">
+        <thead>
+          <tr>
+            <th scope="col" width="20%"></th>
+            <th scope="col" width="20%">Segunda</th>
+            <th scope="col" width="20%">Terça</th>
+            <th scope="col" width="20%">Quarta</th>
+            <th scope="col" width="20%">Quinta</th>
+            <th scope="col" width="20%">Sexta</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">Manhã</th>
+            <td>Lorem</td>
+            <td>Ipsum</td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <th scope="row">Tarde</th>
+            <td></td>
+            <td></td>
+            <td>Ipsum</td>
+            <td>Lorem</td>
+            <td></td>
+          </tr>
+          <tr>
+            <th scope="row">Noite</th>
+            <td></td>
+            <td></td>
+            <td>Ipsum</td>
+            <td>Lorem</td>
+            <td></td>
+          </tr>
+        </tbody>
+      </table>
 
-      <table class="vz-table vz-table--frame">
+      <h1 class="vz-page__header">standard table</h1>
+      <table class="vz-table">
           <thead>
             <tr>
-              <th>Início</th>
-              <th>Término</th>
-              <th>Projeto</th>
-              <th>Anotações</th>
-              <th></th>
+              <th scope="col">Início</th>
+              <th scope="col">Término</th>
+              <th scope="col">Projeto</th>
+              <th scope="col">Anotações</th>
+              <th scope="col" width="1%"></th>
             </tr>
           </thead>
           <tbody>
@@ -74,238 +114,90 @@
               <td>17/12/2018</td>
               <td>VZLAB | Jobs internos</td>
               <td>Veniam eiusmod ad cillum id aliqua adipisicing minim exercitation minim.</td>
-              <td></td>
+              <td class="vz-table__actions">
+                <a href="#">editar</a>
+                <a href="#">excluir</a>
+              </td>
             </tr>
             <tr>
               <td>17/12/2018</td>
               <td>17/12/2018</td>
               <td>VZLAB | Jobs internos</td>
               <td>Veniam eiusmod ad cillum id aliqua adipisicing minim exercitation minim.</td>
-              <td></td>
+              <td class="vz-table__actions">
+                <a href="#">editar</a>
+                <a href="#">excluir</a>
+              </td>
+            </tr>
+            <tr>
+              <td>17/12/2018</td>
+              <td>17/12/2018</td>
+              <td>VZLAB | Jobs internos</td>
+              <td>Veniam eiusmod ad cillum id aliqua adipisicing minim exercitation minim askljhasdfkjlh asdfkjlh asdfkjlh dfs.</td>
+              <td class="vz-table__actions">
+                <a href="#">editar</a>
+                <a href="#">excluir</a>
+              </td>
             </tr>
             <tr>
               <td>17/12/2018</td>
               <td>17/12/2018</td>
               <td>VZLAB | Jobs internos</td>
               <td>Veniam eiusmod ad cillum id aliqua adipisicing minim exercitation minim.</td>
-              <td></td>
+              <td class="vz-table__actions">
+                <a href="#">editar</a>
+                <a href="#">excluir</a>
+              </td>
             </tr>
             <tr>
               <td>17/12/2018</td>
               <td>17/12/2018</td>
               <td>VZLAB | Jobs internos</td>
               <td>Veniam eiusmod ad cillum id aliqua adipisicing minim exercitation minim.</td>
-              <td></td>
+              <td class="vz-table__actions">
+                <a href="#">editar</a>
+                <a href="#">excluir</a>
+              </td>
             </tr>
             <tr>
               <td>17/12/2018</td>
               <td>17/12/2018</td>
               <td>VZLAB | Jobs internos</td>
               <td>Veniam eiusmod ad cillum id aliqua adipisicing minim exercitation minim.</td>
-              <td></td>
+              <td class="vz-table__actions">
+                <a href="#">editar</a>
+                <a href="#">excluir</a>
+              </td>
             </tr>
             <tr>
               <td>17/12/2018</td>
               <td>17/12/2018</td>
               <td>VZLAB | Jobs internos</td>
               <td>Veniam eiusmod ad cillum id aliqua adipisicing minim exercitation minim.</td>
-              <td></td>
+              <td class="vz-table__actions">
+                <a href="#">editar</a>
+                <a href="#">excluir</a>
+              </td>
             </tr>
             <tr>
               <td>17/12/2018</td>
               <td>17/12/2018</td>
               <td>VZLAB | Jobs internos</td>
               <td>Veniam eiusmod ad cillum id aliqua adipisicing minim exercitation minim.</td>
-              <td></td>
+              <td class="vz-table__actions">
+                <a href="#">editar</a>
+                <a href="#">excluir</a>
+              </td>
             </tr>
             <tr>
               <td>17/12/2018</td>
               <td>17/12/2018</td>
               <td>VZLAB | Jobs internos</td>
               <td>Veniam eiusmod ad cillum id aliqua adipisicing minim exercitation minim.</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>17/12/2018</td>
-              <td>17/12/2018</td>
-              <td>VZLAB | Jobs internos</td>
-              <td>Veniam eiusmod ad cillum id aliqua adipisicing minim exercitation minim.</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>17/12/2018</td>
-              <td>17/12/2018</td>
-              <td>VZLAB | Jobs internos</td>
-              <td>Veniam eiusmod ad cillum id aliqua adipisicing minim exercitation minim.</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>17/12/2018</td>
-              <td>17/12/2018</td>
-              <td>VZLAB | Jobs internos</td>
-              <td>Veniam eiusmod ad cillum id aliqua adipisicing minim exercitation minim.</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>17/12/2018</td>
-              <td>17/12/2018</td>
-              <td>VZLAB | Jobs internos</td>
-              <td>Veniam eiusmod ad cillum id aliqua adipisicing minim exercitation minim.</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>17/12/2018</td>
-              <td>17/12/2018</td>
-              <td>VZLAB | Jobs internos</td>
-              <td>Veniam eiusmod ad cillum id aliqua adipisicing minim exercitation minim.</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>17/12/2018</td>
-              <td>17/12/2018</td>
-              <td>VZLAB | Jobs internos</td>
-              <td>Veniam eiusmod ad cillum id aliqua adipisicing minim exercitation minim.</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>17/12/2018</td>
-              <td>17/12/2018</td>
-              <td>VZLAB | Jobs internos</td>
-              <td>Veniam eiusmod ad cillum id aliqua adipisicing minim exercitation minim.</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>17/12/2018</td>
-              <td>17/12/2018</td>
-              <td>VZLAB | Jobs internos</td>
-              <td>Veniam eiusmod ad cillum id aliqua adipisicing minim exercitation minim.</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>17/12/2018</td>
-              <td>17/12/2018</td>
-              <td>VZLAB | Jobs internos</td>
-              <td>Veniam eiusmod ad cillum id aliqua adipisicing minim exercitation minim.</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>17/12/2018</td>
-              <td>17/12/2018</td>
-              <td>VZLAB | Jobs internos</td>
-              <td>Veniam eiusmod ad cillum id aliqua adipisicing minim exercitation minim.</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>17/12/2018</td>
-              <td>17/12/2018</td>
-              <td>VZLAB | Jobs internos</td>
-              <td>Veniam eiusmod ad cillum id aliqua adipisicing minim exercitation minim.</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>17/12/2018</td>
-              <td>17/12/2018</td>
-              <td>VZLAB | Jobs internos</td>
-              <td>Veniam eiusmod ad cillum id aliqua adipisicing minim exercitation minim.</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>17/12/2018</td>
-              <td>17/12/2018</td>
-              <td>VZLAB | Jobs internos</td>
-              <td>Veniam eiusmod ad cillum id aliqua adipisicing minim exercitation minim.</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>17/12/2018</td>
-              <td>17/12/2018</td>
-              <td>VZLAB | Jobs internos</td>
-              <td>Veniam eiusmod ad cillum id aliqua adipisicing minim exercitation minim.</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>17/12/2018</td>
-              <td>17/12/2018</td>
-              <td>VZLAB | Jobs internos</td>
-              <td>Veniam eiusmod ad cillum id aliqua adipisicing minim exercitation minim.</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>17/12/2018</td>
-              <td>17/12/2018</td>
-              <td>VZLAB | Jobs internos</td>
-              <td>Veniam eiusmod ad cillum id aliqua adipisicing minim exercitation minim.</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>17/12/2018</td>
-              <td>17/12/2018</td>
-              <td>VZLAB | Jobs internos</td>
-              <td>Veniam eiusmod ad cillum id aliqua adipisicing minim exercitation minim.</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>17/12/2018</td>
-              <td>17/12/2018</td>
-              <td>VZLAB | Jobs internos</td>
-              <td>Veniam eiusmod ad cillum id aliqua adipisicing minim exercitation minim.</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>17/12/2018</td>
-              <td>17/12/2018</td>
-              <td>VZLAB | Jobs internos</td>
-              <td>Veniam eiusmod ad cillum id aliqua adipisicing minim exercitation minim.</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>17/12/2018</td>
-              <td>17/12/2018</td>
-              <td>VZLAB | Jobs internos</td>
-              <td>Veniam eiusmod ad cillum id aliqua adipisicing minim exercitation minim.</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>17/12/2018</td>
-              <td>17/12/2018</td>
-              <td>VZLAB | Jobs internos</td>
-              <td>Veniam eiusmod ad cillum id aliqua adipisicing minim exercitation minim.</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>17/12/2018</td>
-              <td>17/12/2018</td>
-              <td>VZLAB | Jobs internos</td>
-              <td>Veniam eiusmod ad cillum id aliqua adipisicing minim exercitation minim.</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>17/12/2018</td>
-              <td>17/12/2018</td>
-              <td>VZLAB | Jobs internos</td>
-              <td>Veniam eiusmod ad cillum id aliqua adipisicing minim exercitation minim.</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>17/12/2018</td>
-              <td>17/12/2018</td>
-              <td>VZLAB | Jobs internos</td>
-              <td>Veniam eiusmod ad cillum id aliqua adipisicing minim exercitation minim.</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>17/12/2018</td>
-              <td>17/12/2018</td>
-              <td>VZLAB | Jobs internos</td>
-              <td>Veniam eiusmod ad cillum id aliqua adipisicing minim exercitation minim.</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>17/12/2018</td>
-              <td>17/12/2018</td>
-              <td>VZLAB | Jobs internos</td>
-              <td>Veniam eiusmod ad cillum id aliqua adipisicing minim exercitation minim.</td>
-              <td></td>
+              <td class="vz-table__actions">
+                <a href="#">editar</a>
+                <a href="#">excluir</a>
+              </td>
             </tr>
           </tbody>
         </table>
