--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,10 @@
     </div>
 
     <div class="vz-layout__content">
+
+      <button class="vz-button vz-button--primary" type="">atualizar</button>
+      <button class="vz-button vz-button--secondary" type="">enviar</button>
+
       <h1 class="vz-page__header">compact table</h1>
       <table class="vz-table vz-table--compact">
         <thead>
